--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,10 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.~1~
+*.~2~
+driver/__history/davinci_matrix_keypad.c.~3~
+*.~4~
+driver/__history/davinci_matrix_keypad.c.~5~
+*.~6~
+文档/~$按键键值.xlsx
